--- a/pom.xml
+++ b/pom.xml
@@ -9,30 +9,38 @@
     <artifactId>mapdb-index</artifactId>
     <version>1.0</version>
 
+    <properties>
+        <neo4j.version>2.0.0-M02</neo4j.version>
+        <!--<neo4j.version>2.0-SNAPSHOT</neo4j.version>-->
+        <mapdb.version>0.9.1</mapdb.version>
+        <!--<mapdb.version>0.9.2-SNAPSHOT</mapdb.version>-->
+    </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-kernel</artifactId>
-            <version>2.0.0-M02</version>
+            <version>${neo4j.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-lucene-index</artifactId>
-            <version>2.0.0-M02</version>
+            <version>${neo4j.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-kernel</artifactId>
-            <version>2.0.0-M02</version>
+            <version>${neo4j.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mapdb</groupId>
             <artifactId>mapdb</artifactId>
-            <version>0.9.1</version>
+            <version>${mapdb.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
