--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
     <version>1.0</version>
 
     <properties>
-        <neo4j.version>2.0.0-M02</neo4j.version>
+        <neo4j.version>2.0.0</neo4j.version>
         <!--<neo4j.version>2.0-SNAPSHOT</neo4j.version>-->
-        <mapdb.version>0.9.1</mapdb.version>
+        <mapdb.version>0.9.7</mapdb.version>
         <!--<mapdb.version>0.9.2-SNAPSHOT</mapdb.version>-->
     </properties>
 
@@ -55,8 +55,8 @@
 	      <plugin>
 	        <artifactId>maven-compiler-plugin</artifactId>
 	        <configuration>
-	          <source>1.6</source>
-	          <target>1.6</target>
+	          <source>1.7</source>
+	          <target>1.7</target>
 	          <encoding>UTF-8</encoding>
 	        </configuration>
 	      </plugin>
