--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
     <version>1.0</version>
 
     <properties>
-        <neo4j.version>2.0.0</neo4j.version>
+        <neo4j.version>2.1-SNAPSHOT</neo4j.version>
         <!--<neo4j.version>2.0-SNAPSHOT</neo4j.version>-->
-        <mapdb.version>0.9.7</mapdb.version>
+        <mapdb.version>1.0.0-SNAPSHOT</mapdb.version>
         <!--<mapdb.version>0.9.2-SNAPSHOT</mapdb.version>-->
     </properties>
 
@@ -41,6 +41,7 @@
             <groupId>org.mapdb</groupId>
             <artifactId>mapdb</artifactId>
             <version>${mapdb.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
